# TryIt

./: .gitignore  LICENSE  README.md  ROADMAP.md  claude.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/demo-shop/: Dockerfile  next.config.mjs  package.json  vitest.config.ts
docs/: README.md  api-reference.md  integration-guide.md  mutation-testing.md  self-hosting.md  threat-model.md
docs/alignment/: north-star-gate0.md
docs/design/: component-inventory.md  design-brief.md  design-tokens.md  flows.md
docs/operations/: heartbeats.md
docs/research/: README.md  decision.md  method-space-survey.md  provider-survey.md
e2e/: package.json  playwright.config.ts
e2e/tests/: cart.spec.ts  storefront.spec.ts  tryon-edge.spec.ts  tryon-happy.spec.ts
evidence/: README.md  requirements-analysis.txt
infra/: docker-compose.yml
services/inference-py/: .coverage  Dockerfile  README.md  pyproject.toml
services/inference-py/app/: __init__.py  config.py  factory.py  main.py  schemas.py
services/inference-py/app/backends/: __init__.py  base.py  leffa.py  mock.py
services/inference-py/tests/: __init__.py  conftest.py  test_backends__selection_and_failure.py  test_config__env_loading.py  test_health.py  test_infer__happy_path.py  test_infer__validation_fail_closed.py  test_mock_backend__determinism.py
services/inference-py/tryit_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+99 files in other folders)
